Adjust styles and layout

--- a/mission-planning-dashboard/src/app/app.component.css
+++ b/mission-planning-dashboard/src/app/app.component.css
@@ -1,4 +1,6 @@
 .box {
     display: flex;
-    padding: 10px;
+    padding: 1em;
+    justify-content: center;
+    border: 1px dotted #888888 ;
 }
