Angular Studio Part 2

--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,7 +1,18 @@
 <h3>Equipment</h3>
 <ul>
-  <li>Habitat dome</li>
-  <li>Drones</li>
-  <li>Food containers</li>
-  <li>Oxygen tanks</li>
+  <li *ngFor="let piece of equipment">
+
+    <span *ngIf="selectedPiece !== piece; else elseBlock">
+      <span (click)="edit(piece)" class="editable-text">{{piece}}</span>
+      <button (click)="remove(piece)">remove</button>
+    </span>
+
+    <ng-template #elseBlock>
+      <input #name (keyup.enter)="save(name.value, piece)" value="{{piece}}" />
+      <button (click)="save(name.value, piece)">save</button>
+    </ng-template>
+
+  </li>
 </ul>
+<input #name type="text" />
+<button (click)="add(name.value)">Add</button>
