--- a/src/app/experiments/experiments.component.html
+++ b/src/app/experiments/experiments.component.html
@@ -1,6 +1,18 @@
 <h3>Experiments</h3>
 <ul>
-  <li>Mars soil sample</li>
-  <li>Plant growth in habitat</li>
-  <li>Human bone density</li>
+  <li *ngFor="let experiment of experiments">
+
+    <span *ngIf="selectedExperiment !== experiment; else elseBlock">
+      <span (click)="edit(experiment)" class="editable-text">{{experiment}}</span>
+      <button (click)="remove(experiment)">remove</button>
+    </span>
+
+    <ng-template #elseBlock>
+      <input #name (keyup.enter)="save(name.value, experiment)" value="{{experiment}}" />
+      <button (click)="save(name.value, experiment)">save</button>
+    </ng-template>
+
+  </li>
 </ul>
+<input #name type="text" />
+<button (click)="add(name.value)">Add</button>
