--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -1,6 +1,20 @@
 <h3>Crew</h3>
 <ul>
-  <li>Jessica Watkins</li>
-  <li>Raja Chari</li>
-  <li>Jasmin Moghbeli</li>
+  <li *ngFor="let member of crew">
+
+    <span *ngIf="selectedMember !== member; else elseBlock">
+      <span (click)="edit(member)" class="editable-text">{{member.name}}</span>
+      <span *ngIf="member.firstMission">- 1st</span>
+      <button (click)="remove(member)">remove</button>
+    </span>
+
+    <ng-template #elseBlock>
+      <input #name (keyup.enter)="save(name.value, member)" value="{{member.name}}" />
+      <button (click)="save(name.value, member)">save</button>
+    </ng-template>
+
+  </li>
 </ul>
+<input #name type="text" />
+<label>First mission<input #firstMission type="checkbox" /></label>
+<button (click)="add(name.value, firstMission.checked)">Add</button>
