--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -3,6 +3,11 @@
     <ol>
         <li *ngFor="let item of equipmentItems">
             <!-- "Add to Cargo Hold" button goes here. -->
+            <button (click)="addItem(item)"
+                [disabled]="cargoHold.length === maxItems || item.mass + cargoMass > maximumAllowedMass"
+                [class.li-style]="cargoHold.length !== maxItems && item.mass + cargoMass < maximumAllowedMass">Add to
+                Cargo
+                Hold</button>
             {{item.name}}, {{item.mass}} kg
         </li>
     </ol>
@@ -10,13 +15,14 @@
 
 <hr>
 
-<div class = "displayBox">
+<div class="displayBox">
     <h3>Cargo Hold: {{cargoHold.length}}/{{maxItems}} Spots Filled</h3>
     <ol>
         <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
+    <p [class.nearMaxMass]="maximumAllowedMass - cargoMass <= 200">Mass Budget Remaining:
+        {{ maximumAllowedMass - cargoMass }} kg</p>
     <!-- Add the "Empty Hold" button here. -->
+    <button (click)="emptyHold()">Empty Hold</button>
 </div>
-
